# Marjon-suv

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  railpack.json  requirements.txt  start.sh
app/: main.py
app/api/: app.py  dependencies.py  routes.py
app/bot/: __init__.py  states.py
app/bot/handlers/: admin.py  fallback.py  orders.py  start.py
app/bot/keyboards/: admin.py  common.py
app/config/: database.py  database_url.py  schema.py  settings.py
app/domain/: __init__.py  enums.py
app/middlewares/: db.py
app/models/: __init__.py  order.py  user.py
app/repositories/: order_repository.py  user_repository.py
app/schemas/: order.py  user.py
app/services/: notification_service.py  order_service.py  pricing.py  user_service.py
app/utils/: formatting.py  parsing.py
tests/: test_services.py
