[project]
name = "marjon-suv"
version = "0.1.0"
description = "Telegram bot MVP for water delivery orders"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.110,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "uvicorn[standard]>=0.27,<1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "pytest-asyncio>=0.23,<1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
